# presentation-aws-appstream2.0

code/: appstream2_costs.csv  appstream_charges.py  pyproject.toml  workspaces_charges_chart.py  workspaces_charges_csv.py  workspaces_costs.csv  workspaces_costs_graphics_100_100.csv  workspaces_costs_performance_80_10.csv
diagrams/: appstream.drawio  go_workshop_architecture_live.drawio  network_diagram.drawio
presentation/: NOTES
presentation/reveal.js/: a  index.html
templates/: onprem.cf.yaml  vpc.cf.yaml  vpn.cf.yaml
